--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
   </style>
 </head>
 <body>
-  <h2>Lecteur Port Série Web</h2>
+  <h2>Lecteur Port Série Web V1</h2>
 
   <div class="control-panel">
     <button id="connectBtn">Choisir un port série</button>
