--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
       btn.addEventListener("click", () => {
         btn.classList.toggle("active");
         const content = btn.nextElementSibling;
-        content.style.display = content.style.display === "block" ? "none" : "block";
+        content.style.display = content.style.display === "block" ? "block" : "none";
         btn.textContent = (content.style.display === "block" ? "▾" : "▸") + " " + btn.textContent.slice(2);
       });
     });
